# F1sh-Camera-TX

./: .gitignore  AGENTS.md  CLAUDE.md  f1sh-camera-tx.service  f1sh_camera.proto  f1sh_camera_tx.c  f1sh_camera_tx_new.c  f1sh_camera_tx_old.c  grpc_server.cpp  grpc_wrapper.h  install-service-enhanced.sh  install-service.sh  install_service.sh  meson.build  setup_gadgetonly.sh  test_api.sh  troubleshoot-encoders.sh
.github/: copilot-instructions.md
.github/workflows/: release.yml
